Assistant checkpoint: Integrated Supabase OAuth with Kakao login
Assistant generated file changes:
- client/src/lib/supabase.ts: Add Supabase client configuration
- client/src/lib/auth.ts: Update auth to use Supabase OAuth with Kakao, Add Supabase OAuth function
- client/src/pages/login.tsx: Update login to use Supabase OAuth, Update handleKakaoLogin to use Supabase
- client/src/pages/auth-callback.tsx: Create OAuth callback handler
- client/src/App.tsx: Add auth callback route
Add auth callback route
Add callback route
- client/src/hooks/use-auth.tsx: Update useAuth to include Supabase integration, Update AuthProvider to handle Supabase auth, Add Supabase auth state listener
- .env.example: Add Supabase environment variables

---

User prompt:

Add login code to your client app

When your user signs in, call signInWithOAuth() with kakao as the provider:
```
async function signInWithKakao() {
  const { data, error } = await supabase.auth.signInWithOAuth({
    provider: 'kakao',
  })
}
```
For a PKCE flow, for example in Server-Side Auth, you need an extra step to handle the code exchange. When calling signInWithOAuth, provide a redirectTo URL which points to a callback route. This redirect URL should be added to your redirect allow list.

---
Client
In the browser, signInWithOAuth automatically redirects to the OAuth provider's authentication endpoint, which then redirects to your endpoint.
```
await supabase.auth.signInWithOAuth({
  provider,
  options: {
    redirectTo: `http://example.com/auth/callback`,
  },
})
```
At the callback endpoint, handle the code exchange to save the user session.

### Next.js
Create a new file at app/auth/callback/route.ts and populate with the following:
```app/auth/callback/route.ts
import { NextResponse } from 'next/server'
// The client you created from the Server-Side Auth instructions
import { createClient } from '@/utils/supabase/server'

export async function GET(request: Request) {
  const { searchParams, origin } = new URL(r

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,18 @@ JWT_SECRET=your_jwt_secret_key_here
 
 # 개발 환경 설정
 NODE_ENV=development
+
+# Environment variables for the application
+DATABASE_URL="file:./dev.db"
+
+# Google Sheets API credentials (optional)
+GOOGLE_SHEETS_PRIVATE_KEY=""
+GOOGLE_SHEETS_CLIENT_EMAIL=""
+GOOGLE_SHEETS_SPREADSHEET_ID=""
+
+# Kakao Login (client-side)
+VITE_KAKAO_JAVASCRIPT_KEY=""
+
+# Supabase configuration
+VITE_SUPABASE_URL=""
+VITE_SUPABASE_ANON_KEY=""
